fix alignment

--- a/resources/public/my.css
+++ b/resources/public/my.css
@@ -24,3 +24,16 @@
     transform: translateY(100%);
   }
 }
+
+.center{
+    padding-top: 1in;  
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
+.pad {
+  padding-top: .25in;
+}
